--- a/SonyPlayMemoryFolderFormatter/SonyPlayMemoryFolderFormatter.csproj
+++ b/SonyPlayMemoryFolderFormatter/SonyPlayMemoryFolderFormatter.csproj
@@ -97,5 +97,8 @@
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Readme.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
