--- a/SonyPlayMemoryFolderFormatter/SonyPlayMemoryFolderFormatter.csproj
+++ b/SonyPlayMemoryFolderFormatter/SonyPlayMemoryFolderFormatter.csproj
@@ -98,6 +98,8 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Issue22523-02.txt" />
+    <Content Include="Issue22523.txt" />
     <Content Include="Readme.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
